Fix menu on mobile

--- a/html/style.css
+++ b/html/style.css
@@ -110,7 +110,7 @@
         margin-top: 20px;
         margin-bottom: 20px;
         justify-content: center;
-        font-size: 24px;
+        font-size: 30px;
     }
 
     div.menu a {
